kubernetes/base/apps/home-automation/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: home-automation
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      volumes:
        - name: ha-storage
          persistentVolumeClaim:
            claimName: home-assistant
      containers:
        - image: ghcr.io/home-assistant/home-assistant:2026.5.2
          name: home-assistant
          volumeMounts:
            - mountPath: "/config"
              name: ha-storage
        - image: ghcr.io/coder/code-server:4.118.0
          name: code-server
          securityContext:
            runAsUser: 0
          args:
            - --auth
            - none
            - --user-data-dir
            - /config/.vscode
            - --extensions-dir
            - /config/.vscode
            - /config
          ports:
            - containerPort: 8080
              name: code-server
          volumeMounts:
            - mountPath: "/config"
              name: ha-storage
