kubernetes/base/apps/home-automation/home-assistant/code-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-code
  namespace: home-automation
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8080
      name: http
