kubernetes/base/apps/home-automation/home-assistant/code-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-code-ingress
  namespace: home-automation
  annotations:
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: ha-code.internal
spec:
  tls:
    - hosts:
        - ha-code.internal
      secretName: ha-code-ing-cert
  ingressClassName: nginx
  rules:
  - host: ha-code.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ha-code
            port:
              number: 8080
